<resources>
    <string name="app_name">万运通车队版</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="company_name">狮佰硕供应链管理有限公司</string>
    <string name="company_code">Copyright ⓒ 2017 万运通</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="my_siji">我的司机</string>
    <string name="my_qianbao">我的钱包</string>
    <string name="share">分享</string>
    <string name="erweima_tuiguang">二维码推广</string>
    <string name="register">注册</string>
    <string name="test">测试</string>
    <string name="onclickisexit">再点击一次退出应用</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <!-- 友好提示-->
    <string name="PROMPT_USE_IS_NOT_EMPTY">账号不能为空！</string>
    <string name="PROMPT_PSD_IS_NOT_EMPTY">密码不能为空！</string>
    <string name="PROMPT_PSD_IS_TOO_SHORT">密码不得少于6位</string>
    <string name="qr_code">二维码</string>
    <string name="my_order">我的订单</string>
    <string name="siji">司机</string>
    <string name="wanchengshijian">完成时间</string>
    <string name="siji_details">司机详情</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="sijixingming">司机姓名</string>
    <string name="dianhua">电话</string>
    <string name="shenfenzheng_pic">身份证照片</string>
    <string name="chepai">车牌</string>
    <string name="cheliangxinxi">车辆信息</string>
    <string name="chexing">车型</string>
    <string name="jiashizhenghao">驾驶证号</string>
    <string name="cheliangsuoyouren">车辆所有人</string>
    <string name="xingshizhenghaoma">行驶证号码</string>
    <string name="xingshizheng_pic">行驶证照片</string>
    <string name="jiashizheng_pic">驾驶证照片</string>
    <string name="shenfenzhengnum">身份证号</string>
    <string name="fuwutiaokuan">服务条款</string>
    <string name="updatepsd">修改密码</string>
    <string name="daipaiche">待派车</string>
    <string name="yundangenzong">运单跟踪</string>
    <string name="yundanzhuangtai">运单状态</string>
    <string name="yundanzhuangtai1">运单状态</string>
    <string name="luxian">路线</string>
    <string name="chexingxuqiu">车型需求</string>
    <string name="yujitihuoshijian">预计提货时间</string>
    <string name="wodesiji">我的司机</string>
    <string name="my_yundan">我的运单</string>
    <string name="my_tuiguang">我的推广</string>
    <string name="select_siji">选择司机</string>
    <string name="search_siji">搜索司机</string>
    <string name="search">搜索</string>
    <string name="yunfeibaojia">运费报价</string>
    <string name="shurujine">输入金额</string>
    <string name="youkehui">油卡惠(%)</string>
    <string name="youkajine">油卡金额</string>
    <string name="youkajine1">油卡金额:</string>
    <string name="shurubili">输入比例</string>
    <string name="morenbili">*默认为30% 可修改</string>
    <string name="xianjinjine">现金金额</string>
    <string name="jiangliyoufei">奖励邮费</string>
    <string name="youfeijiangli">*超出默认比例范围奖励邮费</string>
    <string name="xianjinkouchu">现金扣除</string>
    <string name="xianjinkouchu1">*低于默认比例范围扣除现金</string>
    <string name="jiesuanyueding">结算约定</string>
    <string name="dierci">第二次(现金/油卡)</string>
    <string name="diyici">第一次(现金/油卡)</string>
    <string name="zongjine">总金额:</string>
    <string name="yuan">元</string>
    <string name="xiayibu">下一步</string>
    <string name="yundanxiangqing">运单详情</string>
    <string name="qupaiche">去派车</string>
    <string name="yuundanhao">运单号:</string>
    <string name="luxian1">路线:</string>
    <string name="chexing1">车型:</string>
    <string name="zhongliang">重量:</string>
    <string name="huowumingcheng">货物名称:</string>
    <string name="tuoshu">托数:</string>
    <string name="tiji">体积:</string>
    <string name="baoshi">保值:</string>
    <string name="jihuatihuoshijian">计划提货时间:</string>
    <string name="beizhu1">备注:</string>
    <string name="paichequeren">派车确认</string>
    <string name="dingdanbianhao">订单编号</string>
    <string name="dingdanbianhao1">订单编号:</string>
    <string name="xianlu">线路:</string>
    <string name="tihuoshijian">提货时间:</string>
    <string name="youkahui">油卡惠:</string>
    <string name="siji1">司机:</string>
    <string name="queding">确认派车</string>
    <string name="quxiao">取消</string>
    <string name="yunfeibaojia1">运费报价:</string>
    <string name="jiangliyoufei1">奖励邮费:</string>
    <string name="zhuangtaigenzong">状态跟踪</string>
    <string name="zhuanghuoyipaizhao">装货已拍照</string>
    <string name="yizhuanghuo">已装货(装货照片已审核)</string>
    <string name="zhuanghuoyiqiandao">装货已签到</string>
    <string name="yundan_state">运单状态</string>
    <string name="chepaihao">车牌号</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_input_psd_again">请再次确认密码</string>
    <string name="maketrue_chenge">确认修改</string>
    <string name="chengePsd">修改密码</string>
    <string name="phone_fail">手机号不正确</string>
    <string name="autecode_null">验证码不能为空</string>
    <string name="psd_null">密码不能为空</string>
    <string name="psd_xiaoyu_6">密码不能小于6位</string>
    <string name="psd_geshi_fail">密码格式不正确</string>
    <string name="two_input_psd_is_no_same">两次驶入密码不相同</string>
    <string name="wodetuiguang">我的推广</string>
    <string name="banbenjiance">版本检测</string>
    <string name="no_data">还没有数据</string>
    <string name="pai">派</string>
    <string name="wan">完</string>
    <string name="dingdanwancheng">订单完成</string>
    <string name="has_no_data">没有查到数据</string>


    <string name="zuoyegenzong">作业跟踪</string>
    <string name="please_input_zhanghao">请输入账号</string>
    <string name="please_input_psd">请输入密码</string>
    <string name="msg_center">消息中心</string>
    <string name="msg_details">消息详情</string>
    <string name="loading_examine">装载照片</string>
    <string name="qianshou_pic">签收照片</string>
    <string name="commit">提交</string>
    <string name="examine_succeed">审核通过</string>
    <string name="examine_unsucceed">审核不通过</string>
    <string name="xingshiguiji">行驶轨迹</string>
    <string name="shishiweizhi">实时位置</string>
    <string name="orderdetails">订单详情</string>
    <string name="yundanhao">运单号</string>
    <string name="state">状态</string>
    <string name="tihuo">提货</string>
    <string name="xiehuo">卸货</string>
    <string name="tihuo_time">计划提货时间</string>
    <string name="shiji_tihuo_time">实际提货时间</string>
    <string name="huowu">货物</string>
    <string name="huowu1">货物:</string>
    <string name="zhuangxiezhaopian">装卸照片</string>
    <string name="beizhu">备注</string>

    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="login_succeed">登录成功</string>
    <string name="login_faild">登录失败</string>
    <string name="login_neterr">网络异常</string>
    <string name="NET_ERROR">网络异常</string>
    <string name="error">异常</string>
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="chongzhi">充值</string>
    <string name="chuxuka">储蓄卡</string>
    <string name="shuruyanzhengma">输入验证码</string>
    <string name="yujidaodashijian">预计到达时间</string>
    <string name="beidoujiance">北斗检测</string>
    <string name="please_input_carno">请输入车牌号</string>
    <string name="carno_error">车牌号不正确</string>
    <string name="lookpic">查看照片</string>
    <string name="is_new_version">当前版本为最新版本</string>
    <string name="updata">更新</string>
    <string name="new_version">发现新版本</string>
    <string name="canal">取消</string>
    <string name="address">地址:</string>
    <string name="loctiontime">定位时间:</string>
    <string name="chepaihao1">车牌号:</string>
    <string name="select">选择</string>
    <string name="orderno">订单号</string>
    <string name="orderno1">订单号:</string>
    <string name="renwushuoming">任务说明:</string>
    <string name="jihuadaodashijian">计划到达时间:</string>
    <string name="shouqi">收起</string>
    <string name="goodinfo">货物信息</string>
    <string name="yunshuinfo">运输信息</string>
    <string name="jianshu">件数:</string>
    <string name="baozhuangdanw">包装单位:</string>
    <string name="baozhuangshuliang">包装数量:</string>
    <string name="lianxiren">联系人:</string>
    <string name="dakai">打开</string>
    <string name="chakan">查看</string>
    <string name="zhuang1">装:</string>
    <string name="xie1">卸:</string>
    <string name="xie">卸</string>
    <string name="ti">提</string>
    <string name="zhusiji">主司机</string>
    <string name="fusiji">副司机</string>
    <string name="dianhua1">电话:</string>
    <string name="next">下一步</string>
    <string name="please_select_siji">请选择主司机</string>
    <string name="please_input_baojia">请输入报价</string>
    <string name="prompt">提示</string>
    <string name="maketrue_paiche">确定派车</string>
    <string name="cancal">取消</string>
    <string name="ok">好</string>
    <string name="please_input_yundanhao">请输入运单号/车牌/姓名搜索</string>
    <string name="callback">返回</string>
    <string name="please_yundahao">请输入运单号</string>
    <string name="isdriverid_selected">该司机已选择</string>
    <string name="daodashijian1">到达时间:</string>
    <string name="add_zsiji">添加主司机</string>
    <string name="add_fsiji">添加副司机</string>
    <string name="isselected">已选择</string>
    <string name="change">更改</string>
    <string name="order1">订单:</string>
    <string name="linkphone">联系电话:</string>
    <string name="yipaiche">已派车</string>
    <string name="xiehuozhaopian">卸货照片</string>
    <string name="fusiji1">副司机:</string>
    <string name="zhuanghuozhaopian">装货照片</string>
    <string name="jihuadaodashijian1">计划到达时间</string>
</resources>
