<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defautl_navigationbar_size"
        app:navigationIcon="@drawable/goback_black"
        app:title="填写运价"
        android:background="@color/colorPrimary"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/main_gray_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/yunfeibaojia"
                android:textColor="@color/black_333"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_baojia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number|numberDecimal"
                android:text=""
                android:textCursorDrawable="@null"
                android:textColor="@color/black_333"
                android:gravity="center_vertical|right"
                android:paddingHorizontal="10dp"
                android:hint="@string/shurujine"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/youkehui"
                android:textColor="@color/black_333"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_youkahui"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:text=""
                android:textCursorDrawable="@null"
                android:textColor="@color/black_333"
                android:gravity="center_vertical|right"
                android:paddingHorizontal="10dp"
                android:hint="@string/shurubili"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:gravity="center|right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="8sp"
                android:gravity="right"
                android:text="*默认为"/>
            <TextView
                android:id="@+id/tv_ykh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="8sp"
                android:gravity="right"
                android:text=""/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="8sp"
                android:gravity="right"
                android:text="%,可修改"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/youkajine"
                android:textColor="@color/black_333"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_youkajine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:text=""
                android:textCursorDrawable="@null"
                android:textColor="@color/black_333"
                android:gravity="center_vertical|right"
                android:paddingHorizontal="10dp"
                android:hint="@string/shurujine"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/xianjinjine"
                android:textColor="@color/black_333"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_xianjinjine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:text=""
                android:textCursorDrawable="@null"
                android:textColor="@color/black_333"
                android:gravity="center_vertical|right"
                android:paddingHorizontal="10dp"
                android:hint="@string/shurujine"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/jiangliyoufei"
                android:textColor="@color/black_333"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_jiangli"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:text=""
                android:textCursorDrawable="@null"
                android:textColor="@color/black_333"
                android:gravity="center_vertical|right"
                android:paddingHorizontal="10dp"
                android:hint="@string/shurujine"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="8sp"
            android:gravity="right"
            android:paddingHorizontal="10dp"
            android:text="@string/youfeijiangli"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/xianjinkouchu"
                android:textColor="@color/black_333"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:text="-"
                android:layout_marginRight="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/black_333"
                android:gravity="center_vertical|right"
                android:background="@null"/>
            <TextView
                android:id="@+id/tv_kouchu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:text=""
                android:textCursorDrawable="@null"
                android:textColor="@color/black_333"
                android:gravity="center_vertical|right"
                android:paddingRight="10dp"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="8sp"
            android:gravity="right"
            android:paddingHorizontal="10dp"
            android:text="@string/xianjinkouchu1"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/jiesuanyueding"
            android:textColor="@color/black_333"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/diyici"
                android:textColor="@color/black_333"
                android:textSize="14sp" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="@color/black_333"
                android:gravity="center"
                android:hint="@string/xianjinjine"
                android:textCursorDrawable="@null"
                android:background="@null"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:background="@color/main_gray_line"/>
            <TextView
                android:id="@+id/tv_y1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:ellipsize="start"
                android:textColor="@color/black_333"
                android:gravity="center"
                android:hint="@string/youkajine"
                android:textCursorDrawable="@null"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dierci"
                android:textColor="@color/black_333"
                android:textSize="14sp" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="@color/black_333"
                android:gravity="center"
                android:hint="@string/xianjinjine"
                android:textCursorDrawable="@null"
                android:background="@null"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:background="@color/main_gray_line"/>
            <TextView
                android:id="@+id/tv_y2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="number"
                android:ellipsize="start"
                android:textColor="@color/black_333"
                android:gravity="center"
                android:hint="@string/youkajine"
                android:textCursorDrawable="@null"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/zongjine"
                android:textColor="@color/black_333"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_zongjine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/yuan"
                android:textColor="@color/black_333"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_xiayibu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/login_btn_bg_shape"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/black_333"
            android:layout_marginTop="10dp"
            android:text="@string/xiayibu"/>

    </LinearLayout>
</LinearLayout>